# kedro-pytest

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  release.yml  test-release.yml
kedro_pytest/: __init__.py  plugin.py  test_kedro.py
tests/: __init__.py  conftest.py  test_test_kedro.py
