[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
addopts = """
-x tests kedro_pytest \
--disable-warnings \
--capture=tee-sys \
--doctest-modules \
--cov-report term-missing \
--cov-report xml \
--cov-report html \
--junitxml=junit/test-results.xml \
--cov kedro_pytest -ra"""
