[metadata]
name = kedro_pytest
version = attr: kedro_pytest.__version__
description = Helps testing Kedro plugin.
author = nickolasrm
author_email = nickolasrochamachado@gmail.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ProjetaAi/kedro_pytest
platforms = any

[options.entry_points]
pytest11 =
    kedro_pytest = kedro_pytest.plugin

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    kedro>=0.18.2
    pytest
    pytest-tmpfs
    click
    flatten-dict
    PyYAML
    pandas

[options.extras_require]
test =
    pytest-cov
dev =
    types-PyYAML
    %(test)s
